adjusted margins to fix sidebar animation jumping closes gh-522

--- a/static/sidebar.less
+++ b/static/sidebar.less
@@ -81,7 +81,7 @@ img.social-icon-small {
 				&.collection-group {
 					a {
 						color: lighten(@gray, 15%);
-						margin: 10px 0 0;
+						margin: 0;
 						letter-spacing: 1px;
 						font-size: 11px;
 					}
@@ -106,9 +106,6 @@ img.social-icon-small {
 							letter-spacing: 1px;
 							font-weight: bold;
 							text-transform: uppercase;
-							& + [aria-pressed="true"] + ul {
-								margin-top: -10px;
-							}
 						}
 						a {
 							line-height: @list-line-height;
